Updated maven profiles